--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install gcovr
         run: sudo apt-get install -y gcovr
 
+      - name: Verify gcovr version
+        run: gcovr --version
+
       - name: Fetch up-core-api conan recipe
         uses: actions/checkout@v4
         with:
