--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -30,11 +30,8 @@ jobs:
           cp up-cpp/.github/workflows/ci_conan_profile "$(conan profile path default)"
           conan profile show
 
-      - name: Install Python and pip
-        run: sudo apt-get update && sudo apt-get install -y python3-pip
-    
-      - name: Install latest gcovr
-        run: pip install --upgrade gcovr
+      - name: Install gcovr
+        run: sudo apt-get install -y gcovr
 
       - name: Verify gcovr version
         run: gcovr --version
@@ -71,7 +68,7 @@ jobs:
         run: |
           cd up-cpp/build/Release
           mkdir -p ../Coverage
-          gcovr -r ../../ --html --html-details -o ../Coverage/index.html -e '.*test.*'
+          gcovr -r ../../ --html --html-details -o ../Coverage/index.html -e '.*test.*' --gcov-ignore-parse-errors negative_hits.warn_once_per_file
           cd ..
           echo "Coverage report can be found here: ../Coverage/index.html"
 
